Fixed misaligned top row of navbar, sets isExpanded for navbar to false when screen size changes to a large screen's width. Centered and made the buttons wider on the mobile navbar.

--- a/Software/Portfolio/Portfolio/ClientApp/src/app/nav-menu/nav-menu.component.scss
+++ b/Software/Portfolio/Portfolio/ClientApp/src/app/nav-menu/nav-menu.component.scss
@@ -4,6 +4,11 @@ a.navbar-brand {
   word-break: break-all;
 }
 
+.unformatted-link {
+  color: var(--textColor);
+  text-decoration: none;
+}
+
 html {
   font-size: 14px;
 }
